--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -123,7 +123,7 @@ jobs:
 
     - run: sudo apt-get install xvfb
     - name: yarn smoke --fraggle-rock
-      run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=2 --invert-match pwa offline
+      run: xvfb-run --auto-servernum yarn smoke --debug --fraggle-rock -j=1 --retries=2
 
     # Fail if any changes were written to source files.
     - run: git diff --exit-code
